# operon-langgraph-gates

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: paper-citations.md
examples/: 01_stagnation_breaks_loop.ipynb  02_integrity_catches_drift.ipynb  03_stagnation_middleware_create_agent.ipynb
huggingface/space-stagnation-gate/: .gitignore  README.md  app.py  requirements.txt  scenarios.py
scripts/: build_examples.py
specs/: certificate-binding.allium
src/operon_langgraph_gates/: __init__.py  _common.py  integrity.py  middleware.py  stagnation.py
tests/: test_a2a_round_trip.py  test_build_examples.py  test_certificate_binding_contract.py  test_integrity_gate.py  test_ngram_embedder.py  test_public_api.py  test_space_scenarios.py  test_stagnation_gate.py
tests/integration/: test_create_agent_middleware.py  test_loop_break.py
