[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "operon-langgraph-gates"
version = "0.1.0a2"
description = "Reliability primitives for LangGraph — certified stagnation and integrity gates, backed by the Operon categorical framework."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Bogdan Banu", email = "bogdan@banu.be" },
]
keywords = [
  "langgraph",
  "agents",
  "llm",
  "reliability",
  "certificates",
  "stagnation",
  "integrity",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "operon-ai>=0.36.1",
  "langgraph>=1.0.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.11",
  "jupyter>=1.0",
  "ipykernel>=6.0",
  "nbformat>=5.0",
  "nbconvert>=7.0",
]

[project.urls]
Homepage = "https://github.com/coredipper/operon-langgraph-gates"
Documentation = "https://banu.be/operon/"
Issues = "https://github.com/coredipper/operon-langgraph-gates/issues"
"Paper 4" = "https://github.com/coredipper/operon/blob/main/article/paper4/main.pdf"
"Paper 5" = "https://github.com/coredipper/operon/blob/main/article/paper5/main.pdf"

[tool.hatch.build.targets.wheel]
packages = ["src/operon_langgraph_gates"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["langgraph", "langgraph.*", "operon_ai", "operon_ai.*"]
ignore_missing_imports = true
